Setup basic information
Added the headings for each section of the portfolio

--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>My Portfolio</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente id iusto, nisi dolor eius distinctio praesentium architecto dolore molestias ipsa magni enim numquam? Maxime dolore perspiciatis sit nobis dolorum cupiditate!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente id iusto, nisi dolor eius distinctio praesentium architecto dolore molestias ipsa magni enim numquam? Maxime dolore perspiciatis sit nobis dolorum cupiditate!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente id iusto, nisi dolor eius distinctio praesentium architecto dolore molestias ipsa magni enim numquam? Maxime dolore perspiciatis sit nobis dolorum cupiditate!</p>
+    <div class = "Start">
+        <nav>
+            <h2 class = "logo"> Portfolio</h2>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <a href="#" class = "btn">Download CV</a>
+        </nav>
+    </div>
 </body>
 </html>
