--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class = "Start">
+    <div class = "start">
         <nav>
             <h2 class = "logo"> Portfolio</h2>
             <ul>
@@ -22,6 +22,11 @@
             </ul>
             <a href="#" class = "btn">Download CV</a>
         </nav>
+
+        <div class="content">
+            <h1>Name</h1>
+            <h4>Gameplay Programmer</h4>
+        </div>
     </div>
 </body>
 </html>
