Added about section
Added the about section underneath the home page (although the order of the website may change later on). A placeholder for the about text has been added that can be adjusted later, as well as an image that will be replaced with something more appropriate when the details of the portfolio are being finalised.

--- a/index.html
+++ b/index.html
@@ -28,5 +28,18 @@
             <h4>Gameplay Programmer</h4>
         </div>
     </div>
+
+    <!----About section---->
+    <section class="about">
+        <div class="main">
+            <img src = "img/about_img.png">
+            <div class="about-text">
+                <h2>About Me</h2>
+                <h5>Gameplay Programmer</h5>
+                <p>Insert about text here...</p>
+        </div>
+    </section>
+
+
 </body>
 </html>
