Set up skills section
Set up the text and created logos that will go into the skills section on the page.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,58 @@
         </div>
     </section>
 
+    <!----Skills Section---->
+    <div class="skills">
+        <div class="title">
+            <h2>Skills</h2>      
+        </div>
+
+        <div class="card">
+            <img src = "img/c#logo.png">
+            <h5>c#</h5>
+        </div>
+
+        <div class="card">
+            <img src = "img/c++logo.png">
+            <h5>c++</h5>
+        </div>
+
+        <div class="card">
+            <img src = "img/pythonlogo.png">
+            <h5>python</h5>
+        </div>
+
+        <div class="card">
+            <img src = "img/blueprintslogo.png">
+            <h5>UE Blueprints</h5>
+        </div>
+
+        <div class="card">
+            <img src = "img/unitylogo.png">
+            <h5>Unity</h5>
+        </div>
+
+        <div class="card">
+            <img src = "img/unrealenginelogo.png">
+            <h5>Unreal Engine</h5>
+        </div>
+
+        <div class="card">
+            <img src = "img/construct.png">
+            <h5>Construct</h5>
+        </div>
+
+        <div class="card">
+            <img src = "img/visualstudio.png">
+            <h5>Visual Studio</h5>
+        </div>
+
+        <div class="card">
+            <img src = "img/githublogo.png">
+            <h5>GitHub</h5>
+        </div>
+    </div>
+
 
 </body>
 </html>
