--- a/index.html
+++ b/index.html
@@ -48,49 +48,49 @@
 
         <div class = "programming">
             <div class="card">
-                <img src = "img/c#logo.png">
+                <div class="img"><img src = "img/c#logo.png"></div>
                 <h5>c#</h5>
             </div>
 
             <div class="card">
-                <img src = "img/c++logo.png">
+                <div class="img"><img src = "img/c++logo.png"></div>
                 <h5>c++</h5>
             </div>
 
             <div class="card">
-                <img src = "img/pythonlogo.png">
+                <div class="img"><img src = "img/pythonlogo.png"></div>
                 <h5>python</h5>
             </div>
 
             <div class="card">
-                <img src = "img/blueprintslogo.png">
+                <div class="img"><img src = "img/blueprintslogo.png"></div>
                 <h5>UE Blueprints</h5>
             </div>
         </div>
 
         <div class = "software">
             <div class="card">
-                <img src = "img/unitylogo.png">
+                <div class="img"><img src = "img/unitylogo.png"></div>
                 <h5>Unity</h5>
             </div>
 
            <div class="card">
-                <img src = "img/unrealenginelogo.png">
-                <h5>Unreal Engine</h5>
+            <div class="img"><img src = "img/unrealenginelogo.png"></div>
+            <h5>Unreal Engine</h5>
            </div>
 
            <div class="card">
-                <img src = "img/construct.png">
-                <h5>Construct</h5>
+            <div class="img"><img src = "img/construct.png"></div>
+            <h5>Construct</h5>
             </div>
 
             <div class="card">
-                <img src = "img/visualstudio.png">
+                <div class="img"><img src = "img/visualstudio.png"></div>
                 <h5>Visual Studio</h5>
             </div>
 
             <div class="card">
-                <img src = "img/githublogo.png">
+                <div class="img"><img src = "img/githublogo.png"></div>
                 <h5>GitHub</h5>
             </div>
         </div>
