Complete skills section
Skills section now displays all programming languages and software, with their corresponding logos, which is all centred across the page correctly.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class = "programming">
             <div class="card">
-                <div class="img"><img src = "img/c#logo.png"></div>
+                <div class="img"><img src = "img/csharplogo.png"></div>
                 <h5>c#</h5>
             </div>
 
@@ -97,6 +97,13 @@
 
     </div>
 
+
+    <!----Contact Section---->
+    <div class="Contact">
+        <h2>Contact</h2>
+        <h5>email@email.com</h5>
+        <h5>LinkedIn:-----</h5>
+    </div>
 
 </body>
 </html>
