Finished contact and footer section
Finished the contact section, the text just needs to be replaced with the correct information. The footer now displays copyright notice. Started the projects page.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class = "start">
@@ -29,6 +30,30 @@
         </div>
     </div>
 
+     <!----Projects Section---->
+     <div class="projects">
+        <div class="projectstitle">
+            <h2>Projects</h2>      
+        </div>
+
+        <div class = "Throwyourfriends">
+            <div class="card">
+                <div class="img"><img src = "img/ThrowYourFriends.png"></div>
+                <h5>c#</h5>
+            </div>
+
+            <div class="starmapnavigation">
+                <div class="img"><img src = "img/StarMapNavigation.png"></div>
+                <h5>c++</h5>
+            </div>
+
+            <div class="card">
+                <div class="img"><img src = "img/Boids.png"></div>
+                <h5>python</h5>
+            </div>
+
+    </div>
+
     <!----About section---->
     <section class="about">
         <div class="main">
@@ -47,49 +72,49 @@
         </div>
 
         <div class = "programming">
-            <div class="card">
+            <div class="skill">
                 <div class="img"><img src = "img/csharplogo.png"></div>
                 <h5>c#</h5>
             </div>
 
-            <div class="card">
+            <div class="skill">
                 <div class="img"><img src = "img/c++logo.png"></div>
                 <h5>c++</h5>
             </div>
 
-            <div class="card">
+            <div class="skill">
                 <div class="img"><img src = "img/pythonlogo.png"></div>
                 <h5>python</h5>
             </div>
 
-            <div class="card">
+            <div class="skill">
                 <div class="img"><img src = "img/blueprintslogo.png"></div>
                 <h5>UE Blueprints</h5>
             </div>
         </div>
 
         <div class = "software">
-            <div class="card">
+            <div class="skill">
                 <div class="img"><img src = "img/unitylogo.png"></div>
                 <h5>Unity</h5>
             </div>
 
-           <div class="card">
+           <div class="skill">
             <div class="img"><img src = "img/unrealenginelogo.png"></div>
             <h5>Unreal Engine</h5>
            </div>
 
-           <div class="card">
+           <div class="skill">
             <div class="img"><img src = "img/construct.png"></div>
             <h5>Construct</h5>
             </div>
 
-            <div class="card">
+            <div class="skill">
                 <div class="img"><img src = "img/visualstudio.png"></div>
                 <h5>Visual Studio</h5>
             </div>
 
-            <div class="card">
+            <div class="skill">
                 <div class="img"><img src = "img/githublogo.png"></div>
                 <h5>GitHub</h5>
             </div>
@@ -97,13 +122,23 @@
 
     </div>
 
-
     <!----Contact Section---->
     <div class="Contact">
         <h2>Contact</h2>
         <h5>email@email.com</h5>
         <h5>LinkedIn:-----</h5>
     </div>
+
+    <!----footer---->
+    <footer>
+        <div class="end">
+            <p>Copyright </p>
+            <div class="copyright">
+                <i class="fa-regular fa-copyright"></i>
+            </div>
+            <p> Luke Moseley</p>
+        </div>
+    </footer>
 
 </body>
 </html>
