Finished Projects section
Finished the layout for the project section. There is still lots of room for polishing across the whole site, but all the placeholder content can now be replaced with the correct information so start finishing up the whole portfolio.

--- a/index.html
+++ b/index.html
@@ -25,33 +25,35 @@
         </nav>
 
         <div class="content">
-            <h1>Name</h1>
-            <h4>Gameplay Programmer</h4>
+            <h1>LUKE MOSELEY</h1>
+            <h4>GAMEPLAY PROGRAMMER</h4>
         </div>
     </div>
 
      <!----Projects Section---->
      <div class="projects">
         <div class="projectstitle">
-            <h2>Projects</h2>      
+            <h2>PROJECTS</h2>      
         </div>
 
-        <div class = "Throwyourfriends">
-            <div class="card">
-                <div class="img"><img src = "img/ThrowYourFriends.png"></div>
-                <h5>c#</h5>
+        <div class="firstrow">
+            <div class = "project">
+                <h5>Thow Your Friends</h5>
+                <div class="projectimg">
+                    <img src = "img/ThrowYourFriends.png">
+                </div>
             </div>
-
-            <div class="starmapnavigation">
-                <div class="img"><img src = "img/StarMapNavigation.png"></div>
-                <h5>c++</h5>
+        
+            <div class="project">
+                <h5>Star Map Navigation</h5>
+                <div class="projectimg"><img src = "img/StarMapNavigation.png"></div>
             </div>
-
-            <div class="card">
-                <div class="img"><img src = "img/Boids.png"></div>
-                <h5>python</h5>
+        
+            <div class="project">
+                <h5>Boids</h5>
+                <div class="projectimg"><img src = "img/Boids.png"></div>
             </div>
-
+        </div>
     </div>
 
     <!----About section---->
@@ -59,7 +61,7 @@
         <div class="main">
             <img src = "img/about_img.png">
             <div class="about-text">
-                <h2>About Me</h2>
+                <h2>ABOUT ME</h2>
                 <h5>Gameplay Programmer</h5>
                 <p>Insert about text here...</p>
         </div>
@@ -68,7 +70,7 @@
     <!----Skills Section---->
     <div class="skills">
         <div class="title">
-            <h2>Skills</h2>      
+            <h2>SKILLS</h2>      
         </div>
 
         <div class = "programming">
@@ -124,7 +126,7 @@
 
     <!----Contact Section---->
     <div class="Contact">
-        <h2>Contact</h2>
+        <h2>CONTACT</h2>
         <h5>email@email.com</h5>
         <h5>LinkedIn:-----</h5>
     </div>
