--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class = "start">
         <nav>
-            <h2 class = "logo"> Portfolio</h2>
+            <h2 class = "logo"> Luke Moseley</h2>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Projects</a></li>
@@ -21,12 +21,12 @@
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-            <a href="#" class = "btn">Download CV</a>
         </nav>
 
         <div class="content">
             <h1>LUKE MOSELEY</h1>
             <h4>GAMEPLAY PROGRAMMER</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
     </div>
 
@@ -59,7 +59,6 @@
     <!----About section---->
     <section class="about">
         <div class="main">
-            <img src = "img/about_img.png">
             <div class="about-text">
                 <h2>ABOUT ME</h2>
                 <h5>Gameplay Programmer</h5>
