Created 3 web pages for each project
Created a web page for each project in the portfolio. Each one shares the same layout so it remains consistent, and the header bar from the main screen is also at the top of each page. The text and images will need to be updated on each one, and a short video will also need to be created to go into the landing section of each page.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <div id="home">
@@ -43,15 +44,15 @@
                 <h2 class="projects-title">PROJECTS</h2>      
                 <div class="first-row">
                     <div class = "project">
-                        <a href="#"><img src = "img/ThrowYourFriends.png"></a>
+                        <a href="ThrowYourFriends.html"><img src = "img/ThrowYourFriends.png"></a>
                     </div>
             
                     <div class="project">
-                        <a href="#"><img src = "img/StarMapNavigation.png"></a>
+                        <a href="StarMapNavigation.html"><img src = "img/StarMapNavigation.png"></a>
                     </div>
             
                     <div class="project">
-                        <a href="#"><img src = "img/Boids.png"></a>
+                        <a href="Boids.html"><img src = "img/Boids.png"></a>
                     </div>
                 </div>
             </div>      
@@ -131,7 +132,7 @@
     <div id="contact">
         <div class="contact-section">
             <h2>CONTACT</h2>
-            <h5>email@email.com</h5>
+            <h5>lukemoseley@outlook.com</h5>
             <h5>LinkedIn:-----</h5>
         </div>
     </div>
