Added throw your friends information
Changed the placeholder text to proper information on the 'Throw Your Friends' project page. Images and a short video still needs to be made.

--- a/StarMapNavigation.html
+++ b/StarMapNavigation.html
@@ -48,7 +48,8 @@
             <img src = "img\ImagePlaceholder.png">
         </div>
         <div class="Text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Enemy AI was elaborated on across the life cycle of the project, where we tweaked the systems based on feedback we recieved from playtest sessions. Features were added such as a customisable enemy wave spawner, and keeping their bodies of the enemies in the level once they were killed so that players could pick them up and use them as weapons. Re-usable level mechanics we made for puzzle sections that the players would have to complete once all enemies had been defeated.
+            </p>
         </div>
     </section>
 
