--- a/ThrowYourFriends.html
+++ b/ThrowYourFriends.html
@@ -36,7 +36,7 @@
         <div class="Text">
             <h1>THROW YOUR FRIENDS</h1>
             <div class="line"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Throw Your Friends was a university group project where we were tasked with making a local co-op game where players had to work together to achieve a common goal. The game was about picking up and throwing your team mates at enemies using fun physics in order to defeat them and progress through a castle. The game was made in 4 months using Unity using C#</p>
         </div>
         <div class = "Video">
             <img src = "img\ImagePlaceholder.png">
@@ -48,13 +48,13 @@
             <img src = "img\ImagePlaceholder.png">
         </div>
         <div class="Text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>As the solo programmer on the team, it was my responsibilty to write most of the code for the mechanics and systems in order to bring the designers ideas to life. For the player controller, I used Unity's new input system to make the integration of local multiplayer more efficient, and a state machine to have greater control over when and how the player interacts with the world around them. I used a combination of force, torque and bounciness to create a fun yet satisfying throwing mechanic to allow players to use their team mates as their weapon against enemies.</p>
         </div>
     </section>
 
     <section class="SecondSection">
         <div class="Text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Enemy AI was elaborated on across the life cycle of the project, where we tweaked the systems based on feedback we recieved from playtest sessions. Features were added such as a customisable enemy wave spawner, and keeping the bodies of the enemies in the level once they were killed so that players could pick them up and use them as weapons. Re-usable level mechanics we made for puzzle sections that the players would have to complete once all enemies had been defeated.</p>
         </div>
         <div class = "Image">
             <img src = "img\ImagePlaceholder.png">
@@ -66,7 +66,7 @@
             <img src = "img\ImagePlaceholder.png">
         </div>
         <div class="Text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Extra features were included towards the end of the project, such as UI to display useful information to the players, sound effects, and a custom music looper. I created a main menu and in game pause menu, where the game's settings could be adjusted, which was saved so that the values persisted when closing and re-opening the application. Some simple effects were implemented to help polish up the project, such as particles, camera shake and animations.</p>
         </div>
     </section>
 
