--- a/StarMapNavigation.html
+++ b/StarMapNavigation.html
@@ -36,7 +36,7 @@
         <div class="Text">
             <h1>STAR MAP NAVIGATION</h1>
             <div class="line"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Star Ship Navigation was a solo university project about demonstrating an A* path finding algorithm and fundamental mathematical principles used within computer games programming. This project demonstrates procedural generation, a custom lerp library, and A* pathfinding that adjusts to a variety of constraints and variables.            </p>
         </div>
         <div class = "Video">
             <img src = "img\ImagePlaceholder.png">
@@ -48,14 +48,13 @@
             <img src = "img\ImagePlaceholder.png">
         </div>
         <div class="Text">
-            <p>Enemy AI was elaborated on across the life cycle of the project, where we tweaked the systems based on feedback we recieved from playtest sessions. Features were added such as a customisable enemy wave spawner, and keeping their bodies of the enemies in the level once they were killed so that players could pick them up and use them as weapons. Re-usable level mechanics we made for puzzle sections that the players would have to complete once all enemies had been defeated.
-            </p>
+            <p>I implemented procedural generation to create a small galaxy, with the option for 2 different formation shapes. I have ensured that each star within does not collide with any of the others. To generate a route between the stars, I’ve implemented ‘prims algorithm’ to create a minimum spanning tree, so that it is possible for any star to be reached during pathfinding. In the application, I included the option to disable this, meaning there are pockets of stars that are disconnected from the main route, demonstrating that the A* pathfinding algorithm can detect when a route is unreachable.</p>
         </div>
     </section>
 
     <section class="SecondSection">
         <div class="Text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>I implemented an A* pathfinding algorithm from scratch for this project. My approach involved using psuedo code to outline the general theory, and then convert that into the desired programming language, which in this case was C#. The algorithm can detect when a destination is impossible to reach, demonstrated in my project when the player selects a star that has no route connecting to it. I aslo created a 'pirate space' zone, where the costs of all routes existing in this space are multiplied, which shows how the algorithm can adapt and look for a route that avoids traveling through this, even if it means going a longer way around.</p>
         </div>
         <div class = "Image">
             <img src = "img\ImagePlaceholder.png">
@@ -67,7 +66,7 @@
             <img src = "img\ImagePlaceholder.png">
         </div>
         <div class="Text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>I created a custom lerp library to move a space ship across the route selected by the player. To make the system more efficient, the types of lerps are stored as an enumeration, so it is more human-readable when choosing the desired lerp to trigger. I used an object-oriented aproach when designing the lerping function, and used polymorphism so that the same function can be called, and depending on the parameters passed in the results will vary. I also allowed the option to choose which aspect of an object is affected by the lerp, such as movement, rotation, color, and more</p>
         </div>
     </section>
 
