Added thumbnails and info
Added thumbnails for each project on the projects page, and also changed the placeholder text for the introduction and summary to a write up of information

--- a/ThrowYourFriends.html
+++ b/ThrowYourFriends.html
@@ -39,7 +39,7 @@
             <p>Throw Your Friends was a university group project where we were tasked with making a local co-op game where players had to work together to achieve a common goal. Our team consisted of 1 programmer, which was myself, 2 designers, and 2 artists. The game was about picking up and throwing your team mates at enemies using fun physics in order to defeat them and progress through a castle. The game was made in 4 months using Unity using C#</p>
         </div>
         <div class = "Video">
-            <img src = "img\ImagePlaceholder.png">
+            <img src = "img\VideoPlaceholder.png">
         </div>
     </section>
 
