--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="content">
                 <h1>LUKE MOSELEY</h1>
                 <h4>GAMEPLAY PROGRAMMER</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Hello! I'm Luke, a second year Computer Games Programming student at the University of Gloucestershire who loves to implement engaging gameplay systems. Whether I'm tuning the enemies difficulty, or tweaking the players jump, I'm always looking for that little detail that can be changed to make the game feel just right. Feel free to check out my portfolio and see some of the projects I've worked on.</p>
             </div>
         </div>
     </div>
@@ -66,7 +66,7 @@
                 <div class="about-text">
                     <h2>ABOUT ME</h2>
                     <h5>GAMEPLAY PROGRAMMER</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>I'm currently a second year student studying Computer Games Programming at the University of Gloucestershire. I always look forward to opportunities where I can develop my skills, as to become a more efficient developer and gain a further understanding of how gameplay mechanics work. I've worked on both solo and team projects, learning about a variety of different tools and concepts used within the games development field. Outside of university work, I also work on my own games and have participated in game jams.</p>
             </div>
         </section>
     </div>
