--- a/Boids.html
+++ b/Boids.html
@@ -39,7 +39,7 @@
             <p>Boids simulation was a solo project about demonstrating steering and flocking behaviours within a set of AI agents. I've expanded on the basic principles of boid movement to create more advanced behaviour, and also included optimisation techniques such as multi-threading and an oct-tree. This project was made in Unreal Engine 5 with C++.</p>
         </div>
         <div class = "Video">
-            <img src = "img\ImagePlaceholder.png">
+            <img src = "img\VideoPlaceholder.png">
         </div>
     </section>
 
