--- a/StarMapNavigation.html
+++ b/StarMapNavigation.html
@@ -39,7 +39,7 @@
             <p>Star Ship Navigation was a solo university project about demonstrating an A* path finding algorithm and fundamental mathematical principles used within computer games programming. This project demonstrates procedural generation, a custom lerp library, and A* pathfinding that adjusts to a variety of constraints and variables. I used Unity and C# for this project.</p>
         </div>
         <div class = "Video">
-            <img src = "img\ImagePlaceholder.png">
+            <img src = "img\VideoPlaceholder.png">
         </div>
     </section>
 
