Fixed colour palette and small screen issues
Changed the colour palette of the background, and also highlighted certain text elements. An issue with the side menu on small screens has been fixed on the main page.

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     <div id="contact">
         <div class="contact-section">
             <h2>CONTACT</h2>
-            <h5>lukemoseley@outlook.com</h5>
-            <h5>LinkedIn:-----</h5>
+            <h5><i class="fa-regular fa-envelope"></i> lukemoseley@outlook.com</h5>
+            <h5><i class="fa-brands fa-linkedin"></i> LinkedIn</h5>
         </div>
     </div>
     <!----footer---->
@@ -155,7 +155,7 @@
         sidemenu.style.right = "0";
     }
     function closemenu(){
-        sidemenu.style.right = "-200px";
+        sidemenu.style.right = "-300px";
     }
 
 </script>
