Added video showreels for star map and boid projects
Added a short 30 second video to the projects page of 'Star Map Navigation' and 'Boid Simulaton'

--- a/Boids.html
+++ b/Boids.html
@@ -39,7 +39,10 @@
             <p>Boids simulation was a solo project about demonstrating steering and flocking behaviours within a set of AI agents. I've expanded on the basic principles of boid movement to create more advanced behaviour, and also included optimisation techniques such as multi-threading and an oct-tree. This project was made in Unreal Engine 5 with C++.</p>
         </div>
         <div class = "Video">
-            <img src = "img\VideoPlaceholder.png">
+            <video width="1920" height="1080" controls>
+                <source src="videos\BoidShowreel.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+              </video>
         </div>
     </section>
 
